overflow and trigger fix

--- a/style.css
+++ b/style.css
@@ -141,6 +141,15 @@ nav {
     /* margin-bottom: 20px; */
 }
 
+.explain > h4 {
+    /* color: #a60000; */
+    font-size: 2rem;
+    margin: 120 30px 7% 30px;
+    /* font-size: 3rem; */
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #ffffff;
+}
+
 .explain h4 {
     /* color: #a60000; */
     font-size: 2rem;
@@ -448,12 +457,21 @@ footer {
         width: 70%;
     }
 
+
+
     .explain h4 {
         /* color: #a60000; */
         /* font-size: 72px; */
         margin: 30px 30px 7% 30px;
         font-size: 3rem;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
+    .explain > h4 {
+        font-size: 2rem;
+        margin: 100px 30px 7% 30px;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: #ffffff;
     }
 
     .explain2 h4 {
